--- a/index.html
+++ b/index.html
@@ -184,7 +184,12 @@ color: #888;
           <img src="https://www.dailimseed.co.kr/modules/shop/files/2016/04/03/3729_2_1.jpg?v=20170427114550"><br />
           삼색조팝 (Spiraea japonica 'Goldflame')
         </div>
-  
+		
+      <div class="item">
+        <img src="http://www.eseolim.co.kr/IMGUpload/GAL_STORE/GS1C3_01621.jpg"><br />
+        스카이로켓 향나무 (Skyrocket juniper)
+      </div>
+		
 
 	</div>
 </div>	</div>
