--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@ color: #888;
       </div>
   
       <div class="item">
-          <img src="http://gdimg.gmarket.co.kr/752121056/still/600?ver=0"><br />
-          유칼립투스 베이비블루 (Eucalyptus Baby Blue)
+          <img src="http://www.memozee.com/FILES/034/jinsuk.778.IMG_20150912_162005.jpg"><br />
+          꿩의 비름(October Daphne)
         </div>
       
       <div class="item">
