--- a/index.html
+++ b/index.html
@@ -235,6 +235,11 @@ img, iframe {
 		 <img src="http://www.dailimseed.co.kr/modules/shop/files/thumb/2015/10/02/ca15341f2a9a65eb29873764907af94b184050.jpg"><br />
 		    분꽃나무 (Koreanspice viburnum)
 		</div>	
+		
+	    <div class="item">
+		 <img src="https://www.dailimseed.co.kr/modules/shop/files/2018/01/25/5065_2_1.jpg?v=20181205105414"><br />
+		    휴케라 (Heuchera)
+		</div>	
 
         </div>
     </div>
